--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
+    "start-watch": "nodemon index.js",
+    "dev": "concurrently \"yarn run start-watch\" \"cd client && yarn start\"",
     "test": "jest"
   },
   "repository": {
@@ -24,6 +26,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "jest": "^26.6.3"
+    "concurrently": "^5.3.0",
+    "jest": "26.6.0",
+    "nodemon": "^2.0.7"
   }
 }
