--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "start-watch": "nodemon index.js",
+    "start-watch": "nodemon server.js",
     "dev": "concurrently \"yarn run start-watch\" \"cd client && yarn start\"",
     "test": "jest"
   },
@@ -28,6 +28,7 @@
   "devDependencies": {
     "concurrently": "^5.3.0",
     "jest": "26.6.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "supertest": "^6.1.3"
   }
 }
